gke/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: nginx-api-ingress
  namespace: pvcy
spec:
  tls:
  - hosts:
    - api.pvcy.customer.com
    secretName: nginx-api-secret
  rules:
  - host: api.pvcy.customer.com
    http:
      paths:
      - backend:
          serviceName: nginx-api-service
          servicePort: 80
